Remove model and detect route logic from API server and refactor mobile app structure
